--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 
+/* scrollbar */
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
 
 .modal-container::-webkit-scrollbar {
-    width: 9px;
+    width: 6px;
   }
   
   .modal-container::-webkit-scrollbar-thumb {
@@ -18,4 +19,37 @@
   
   .modal-container::-webkit-scrollbar-track {
     background-color: #f1f1f1; /* Set the color of the track */
+  }
+
+  /* loader */
+
+  #loader-container {
+    background-color: white; /* Set the initial background color */
+    /* border: 4px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    /* transition: background-color 1s, opacity 1s; */
+  }
+  
+  #loader {
+    width: 70px; /* Set the width of your logo */
+    height: 70px; /* Set the height of your logo */
+    border-radius: 100%;
+    background: url('https://imgs.search.brave.com/xAZdit5G3j141vKRLHBUT3ukfQBknk4xaTJwdT5rgZs/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90b3Bw/bmcuY29tL3VwbG9h/ZHMvcHJldmlldy9y/ZWRkaXQtbG9nby1y/ZWRkaXQtaWNvbi0x/MTU2Mjg2NTg5Njhw/ZTh1dHl4anQucG5n') center/contain no-repeat; 
+    animation: scaleUpAndFade 2s infinite;
+  }
+  
+  @keyframes scaleUpAndFade {
+    0% {
+      transform: scale(1);
+    }
+    70% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(1.5);
+      opacity: 0;
+    }
   }
