--- a/app/globals.css
+++ b/app/globals.css
@@ -27,37 +27,51 @@ html {
   }
 
   /* loader */
-
-  #loader-container {
-    background-color: white; /* Set the initial background color */
-    /* border: 4px solid black; */
+  .loader {
+    width: 60px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-    /* transition: background-color 1s, opacity 1s; */
+    justify-content: space-evenly;
+    text-align: center;
   }
   
-  #loader {
-    width: 70px; /* Set the width of your logo */
-    height: 70px; /* Set the height of your logo */
-    border-radius: 100%;
-    background: url('https://imgs.search.brave.com/xAZdit5G3j141vKRLHBUT3ukfQBknk4xaTJwdT5rgZs/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90b3Bw/bmcuY29tL3VwbG9h/ZHMvcHJldmlldy9y/ZWRkaXQtbG9nby1y/ZWRkaXQtaWNvbi0x/MTU2Mjg2NTg5Njhw/ZTh1dHl4anQucG5n') center/contain no-repeat; 
-    animation: scaleUpAndFade 2s infinite;
+  .ball {
+    list-style: none;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #fff;
   }
   
-  @keyframes scaleUpAndFade {
-    0% {
-      transform: scale(1);
-    }
-    70% {
-      transform: scale(1.5);
-    }
-    100% {
-      transform: scale(1.5);
-      opacity: 0;
+  .ball:nth-child(1) {
+    animation: bounce-1 2.1s ease-in-out infinite;
+  }
+  
+  @keyframes bounce-1 {
+    50% {
+      transform: translateY(-13px);
     }
   }
+  
+  .ball:nth-child(2) {
+    animation: bounce-3 2.1s ease-in-out 0.3s infinite;
+  }
+  
+  @keyframes bounce-2 {
+    50% {
+      transform: translateY(-13px);
+    }
+  }
+  
+  .ball:nth-child(3) {
+    animation: bounce-3 2.1s ease-in-out 0.6s infinite;
+  }
+  
+  @keyframes bounce-3 {
+    50% {
+      transform: translateY(-13px);
+    }
+  }
+
 /*  Infinite Scroll Posts Loader*/
   .circle{
     width: 2.5em;
@@ -151,4 +165,7 @@ html {
     }
   }
 
-
+  /* popular page gradient carousel card */
+  .gradient-bg {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 100%);
+  }
