--- a/app/globals.css
+++ b/app/globals.css
@@ -169,3 +169,9 @@ html {
   .gradient-bg {
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 100%);
   }
+
+  /* sidebar breakpoint css */
+
+  .sidebarOpacity{
+    background-color: rgba(0, 0, 0, 0.6);
+  }
