--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,38 @@ html {
   }
 
   /* loader */
-  .loader {
+  #loader-container {
+    background-color: white; /* Set the initial background color */
+    /* border: 4px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    /* transition: background-color 1s, opacity 1s; */
+  }
+
+  #loader {
+    width: 70px; /* Set the width of your logo */
+    height: 70px; /* Set the height of your logo */
+    border-radius: 100%;
+    background: url('https://imgs.search.brave.com/xAZdit5G3j141vKRLHBUT3ukfQBknk4xaTJwdT5rgZs/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90b3Bw/bmcuY29tL3VwbG9h/ZHMvcHJldmlldy9y/ZWRkaXQtbG9nby1y/ZWRkaXQtaWNvbi0x/MTU2Mjg2NTg5Njhw/ZTh1dHl4anQucG5n') center/contain no-repeat; 
+    animation: scaleUpAndFade 2s infinite;
+  }
+
+  @keyframes scaleUpAndFade {
+    0% {
+      transform: scale(1);
+    }
+    70% {
+      transform: scale(1.5);
+    }
+    100% {
+      transform: scale(1.5);
+      opacity: 0;
+    }
+  }
+
+  .formLoader {
     width: 60px;
     display: flex;
     justify-content: space-evenly;
@@ -48,7 +79,7 @@ html {
   
   @keyframes bounce-1 {
     50% {
-      transform: translateY(-13px);
+      transform: translateY(-9px);
     }
   }
   
@@ -58,7 +89,7 @@ html {
   
   @keyframes bounce-2 {
     50% {
-      transform: translateY(-13px);
+      transform: translateY(-9px);
     }
   }
   
@@ -68,7 +99,7 @@ html {
   
   @keyframes bounce-3 {
     50% {
-      transform: translateY(-13px);
+      transform: translateY(-9px);
     }
   }
 
@@ -111,60 +142,6 @@ html {
     }
    }
    
-   /*  loginForm Loader */
-   .dots-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .dot {
-    height: 10px;
-    width: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    background-color: white;
-    animation: pulse 1.5s infinite ease-in-out;
-  }
-  
-  .dot:last-child {
-    margin-right: 0;
-  }
-  
-  .dot:nth-child(1) {
-    animation-delay: -0.3s;
-  }
-  
-  .dot:nth-child(2) {
-    animation-delay: -0.1s;
-  }
-  
-  .dot:nth-child(3) {
-    animation-delay: 0.1s;
-  }
-  
-  @keyframes pulse {
-    0% {
-      transform: scale(0.8);
-      background-color: #e5299a;
-      box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
-    }
-  
-    50% {
-      transform: scale(1.2);
-      background-color: #49eedb;
-      box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
-    }
-  
-    100% {
-      transform: scale(0.8);
-      background-color: rgb(240, 30, 104);
-      box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
-    }
-  }
-
   /* popular page gradient carousel card */
   .gradient-bg {
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 100%);
